--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Front-End Developer (React, Javascript)">
+    <meta name="keywords" content="JSX, CSS, JavaScript, Reactjs, Bootstrap4, responsive, portfolio">
+    <meta name="author" content="Ayoub BOUYA">
+  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
      
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       
-    <title>React App</title>
+    <title>Ayoub BOUYA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
